// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> Default story renders snapshot 1`] = `
<div
  class="grid"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> FourUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--4up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> OneToThreeUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--1-3up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> OneToTwoToFourUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--1-2-4up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> OneToTwoToOneUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--1-2-1up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> SideBySide story renders snapshot 1`] = `
<div
  class="grid grid--side-by-side"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> ThreeUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--3up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;

exports[`<Grid /> TwoUpGrid story renders snapshot 1`] = `
<div
  class="grid grid--2up"
>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
  <div
    class="grid__item"
  >
    <div
      class="fpo !my-0"
    >
      Grid Item
    </div>
  </div>
</div>
`;
